<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A2727"
    tools:context=".ui.view.AlbumList">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/app_name"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/artistsBtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="172dp"
        android:text="@string/artists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <Button
        android:id="@+id/albumsBtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/albums"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistsBtn" />

    <Button
        android:id="@+id/collectorsBtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/collectors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumsBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>
